added homework and edited .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.exe
 *.out
 *.app
+Homework 16.02/first
+Homework 16.02/four
+Homework 16.02/second
+Homework 16.02/third
+Homework 23.02/2_2
+Homework 23.02/2_1
+Homework 23.02/2_3
